cluster/media/jellyfin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/enable-global-auth: 'false'
spec:
  ingressClassName: external
  rules:
    - host: jf.sko.ai
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port: 
                  number: 80
            path: /
            pathType: Prefix
